--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,8 @@ nav {
   width: 100%;
   height: 80px;
   background-color: #252831;
-  text-align:center;
+  text-align: center;
+  vertical-align: middle;
 }
 nav h1 {
   margin: auto;
