--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -4,9 +4,11 @@
     }
 }
 
-
-
 nav h1 a {
     font-weight: 100;
     letter-spacing: 5px;
 }
+
+#restaurant-container, #reviews-container {
+    padding: 20px;
+ }
