--- a/css/styles.css
+++ b/css/styles.css
@@ -139,21 +139,20 @@ nav h1 a {
   text-align: center;
 }
 #restaurants-list li {
+  display: inline-block;
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
   margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 15px;
   text-align: left;
-  width: 270px;
+  max-width: 270px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
   min-width: 100%;
 }
 #restaurants-list li h1 {
@@ -177,7 +176,8 @@ nav h1 a {
   display: inline-block;
   font-size: 10pt;
   margin: 15px 0 0;
-  padding: 8px 30px 10px;
+  padding: 8px 0;
+  width: 100%;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
